# test

./: README.md  pyproject.toml
src/task_manager/: __init__.py  cli.py  manager.py  models.py  storage.py
tests/: test_manager.py  test_storage.py
